@@ -160,11 +160,8 @@ void caml_darken (value v, value *p /* not used */)
     }
 #ifdef NO_NAKED_POINTERS
     /* We insist that naked pointers to outside the heap point to things that
-       look like values with headers coloured black.  This isn't always
-       strictly necessary but is essential in certain cases---in particular
-       when the value is allocated in a read-only section.  (For the values
-       where it would be safe it is a performance improvement since we avoid
-       putting them on the grey list.) */
+       look like values with headers coloured black.  This is always
+       strictly necessary because the compactor relies on it. */
     CAMLassert (Is_in_heap (v) || Is_black_hd (h));
 #endif
     CAMLassert (!Is_blue_hd (h));
